tooling/nargo_cli/tests/snapshots/execution_success/cast_signed_to_u1/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(
    zero: i32,
    one: i32,
    two: i32,
    three: i32,
    minus_one: i32,
    minus_two: i32,
    minus_three: i32,
) {
    assert(((zero as u8) % 2_u8) == 0_u8);
    assert(((one as u8) % 2_u8) == 1_u8);
    assert(((two as u8) % 2_u8) == 0_u8);
    assert(((three as u8) % 2_u8) == 1_u8);
    assert(((minus_one as u8) % 2_u8) == 1_u8);
    assert(((minus_two as u8) % 2_u8) == 0_u8);
    assert(((minus_three as u8) % 2_u8) == 1_u8);
    let zero: i32 = 0_i32;
    let one: i32 = 1_i32;
    let two: i32 = 2_i32;
    let three: i32 = 3_i32;
    let minus_one: i32 = -1_i32;
    let minus_two: i32 = -2_i32;
    let minus_three: i32 = -3_i32;
    assert(((zero as u8) % 2_u8) == 0_u8);
    assert(((one as u8) % 2_u8) == 1_u8);
    assert(((two as u8) % 2_u8) == 0_u8);
    assert(((three as u8) % 2_u8) == 1_u8);
    assert(((minus_one as u8) % 2_u8) == 1_u8);
    assert(((minus_two as u8) % 2_u8) == 0_u8);
    assert(((minus_three as u8) % 2_u8) == 1_u8);
}
